kubernetes/apps/alexstav/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alexstav
  namespace: alexstav
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alexstav
  template:
    metadata:
      labels:
        app: alexstav
    spec:
      containers:
        - name: nginx
          image: ghcr.io/mark-grigorev/alexstav:latest
          ports:
            - containerPort: 80
          resources:
            requests: 
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 20m
              memory: 64Mi
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: alexstav-html
