kubernetes/apps/alexstav/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alexstav
  namespace: alexstav
spec:
  selector:
    app: alexstav
  ports:
    - port: 80
      targetPort: 80
