kubernetes/apps/alexstav/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alexstav
  namespace: apps
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  parentRefs:
    - name: main
      namespace: networking
      sectionName: https-alexstav
  hostnames:
    - alexstav.dev
  rules:
    - backendRefs:
        - name: alexstav
          port: 80
